--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,8 +5,7 @@
     ],
     "editor.renderWhitespace": "all",
     "editor.tabSize": 4,
-    "[python]": {
-    "editor.defaultFormatter": "charliermarsh.ruff",
-    "editor.formatOnSave": true
+    "[markdown]": {
+        "editor.wordWrap": "bounded",
   }
 }
