--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -29,10 +29,14 @@ jobs:
         run: |
           mkdocs build
           git clone https://github.com/ka-sarthak/ka-sarthak.github.io.git
-          git checkout gh-pages
           cd ka-sarthak.github.io
+          git checkout gh-pages
+          git config user.email "sarthakkapoor@hotmail.com"
+          git config user.name "Sarthak Kapoor"
           rm -rf *
           cp -r ../site/* .
           git add .
           git commit -m "Automatic deployment"
           git push https://ka-sarthak:${{ secrets.TARGET_REPO_PAT }}@github.com/ka-sarthak/ka-sarthak.github.io.git
+          cd ..
+          rm -rf ka-sarthak.github.io
