--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -36,6 +36,6 @@ jobs:
           cp -r ../site/* .
           git add .
           git commit -m "Automatic deployment"
-          git push https://ka-sarthak:${{ secrets.TARGET_REPO_PAT }}@github.com/ka-sarthak/ka-sarthak.github.io.git
+          git push https://ka-sarthak:${{ secrets.ACTIONS_GITHUB_TOKEN }}@github.com/ka-sarthak/ka-sarthak.github.io.git
           cd ..
           rm -rf ka-sarthak.github.io
