--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.ACTIONS_GITHUB_TOKEN }}
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -24,8 +26,6 @@ jobs:
           pip install .
 
       - name: Build and Deploy
-        env:
-          ACTIONS_GITHUB_TOKEN: ${{ secrets.ACTIONS_GITHUB_TOKEN }}
         run: |
           mkdocs build
           git clone https://github.com/ka-sarthak/ka-sarthak.github.io.git
@@ -36,6 +36,6 @@ jobs:
           cp -r ../site/* .
           git add .
           git commit -m "Automatic deployment"
-          git push https://ka-sarthak:${{ secrets.ACTIONS_GITHUB_TOKEN }}@github.com/ka-sarthak/ka-sarthak.github.io.git
+          git push -f
           cd ..
           rm -rf ka-sarthak.github.io
