--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -28,5 +28,5 @@ jobs:
       - name: Build and Deploy
         run: |
           mkdocs gh-deploy --force \
-          --remote-name https://ka-sarthak:${{ secrets.ACTIONS_GITHUB_TOKEN }}@github.com/ka-sarthak/ka-sarthak.github.io.git \
+          --remote-name https://github.com/ka-sarthak/ka-sarthak.github.io.git \
           --remote-branch gh-pages
