--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -55,3 +55,10 @@ nav:
   - Posts:
     - "2019":
       - posts/running-inspiration.md
+
+extra:
+  social:
+  - icon: fontawesome/brands/github
+    link: https://github.com/ka-sarthak
+  - icon: fontawesome/brands/linkedin
+    link: https://linkedin.com/in/kapoorsarthak/
