--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -56,6 +56,7 @@ nav:
       - showcase/llmads.md
       - showcase/mm-generator.md
       - showcase/tracking-optima.md
+      - showcase/gravity-wave-detection.md
   - Posts:
     - "2019":
       - posts/running-inspiration.md
